deemix-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deemix
  labels:
    app: deemix
    part-of: deemix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deemix
      part-of: deemix
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deemix
        part-of: deemix
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      containers:
      - name: deemix
        image: registry.gitlab.com/bockiii/deemix-docker
        ports:
        - name: deemix
          containerPort: 6595
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 128Mi
        volumeMounts:
        - name: deemix
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: deemix
        persistentVolumeClaim:
          claimName: deemix
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
