deemix-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: deemix
spec:
  selector:
    app: deemix
    part-of: deemix
  type: ClusterIP
  ports:
    - port: 6595
      targetPort: deemix
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
