deemix-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deemix
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
  - host: deemix.<path:apps-kv/data/general#internalDN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deemix
            port:
              number: 6595
  tls:
  - hosts:
    - deemix.<path:apps-kv/data/general#internalDN>
